--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
             <h1>Navigation and Links | Contact</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
